--- a/learning_github.ipynb
+++ b/learning_github.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOeMexJV/rWI3LlYv/4HBoO",
+      "authorship_tag": "ABX9TyOV8y8LK21q5Pq2tFufGAUC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,7 +114,86 @@
         "!python main.py"
       ],
       "metadata": {
-        "id": "vqReBGFnyYsv"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vqReBGFnyYsv",
+        "outputId": "3ac07189-cc6d-4b01-92b3-4e1fd956b249"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hey!\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git commit -m 'commit message'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "p3aZi3KUy5PM",
+        "outputId": "badbdf54-e3ed-4a43-f153-8318e0978071"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "On branch main\n",
+            "Your branch is up to date with 'origin/main'.\n",
+            "\n",
+            "Changes not staged for commit:\n",
+            "  (use \"git add <file>...\" to update what will be committed)\n",
+            "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+            "\t\u001b[31mmodified:   main.py\u001b[m\n",
+            "\n",
+            "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git add main.py\n",
+        "!git config --global user.email \"ec.vijaykumar@bldeacet.ac.in\"\n",
+        "!git commit -m 'commit message'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RXlm9-5My7Xm",
+        "outputId": "ed94f629-97b4-4fb6-81d7-58fd05f3787b"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[main 800b372] commit message\n",
+            " 1 file changed, 1 insertion(+)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_987H6W2zRh9"
       },
       "execution_count": null,
       "outputs": []
