--- a/learning_github.ipynb
+++ b/learning_github.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOV8y8LK21q5Pq2tFufGAUC",
+      "authorship_tag": "ABX9TyMDhtCguSpx89Z0Zmbuagvi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -191,9 +191,122 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import function1"
+      ],
       "metadata": {
         "id": "_987H6W2zRh9"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python function1.py"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5lmZocor1al4",
+        "outputId": "1cea48a8-2803-485a-f3c4-605bedf9a4bc"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I am function\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python function1.py"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CVlLcMA21gVM",
+        "outputId": "9f1758cb-347a-4711-9eef-b0fdfacc7ca5"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hey!\n",
+            "4\n",
+            "Traceback (most recent call last):\n",
+            "  File \"function1.py\", line 1, in <module>\n",
+            "    import main.py\n",
+            "ModuleNotFoundError: No module named 'main.py'; 'main' is not a package\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python function1.py"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5JYazKp11rfb",
+        "outputId": "cf4932cf-c497-4932-ba88-fb9f03f2bf3e"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hey!\n",
+            "4\n",
+            "I am function\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git add function1.py\n",
+        "!git config --global user.email \"ec.vijaykumar@bldeacet.ac.in\"\n",
+        "!git commit -m 'commit message'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cIU-HE4o1xUW",
+        "outputId": "00e27b85-ec1c-4535-c605-3dd02bf769e5"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[main c84f7f7] commit message\n",
+            " 1 file changed, 1 insertion(+)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xF5gE9H113IC"
       },
       "execution_count": null,
       "outputs": []
